--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
   <p>
   <label> Email Address  (eg. your_address@yourdomain.com)<br><input type="email" name="email" /></label>
   </p>
+	 <p>
+      <label>Username<br><input type="text" name="name" /></label>   
+  </p>
   <p>
       <label>Password<br><input type="text" name="name" /></label>   
   </p>
+	
   <p>
     <button class="button" type="submit">View Shared Document</button>
   </p>
