--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   <label> Email Address  (eg. your_address@yourdomain.com)<br><input type="email" name="email" /></label>
   </p>
 	 <p>
-      <label>Username<br><input type="text" name="name" /></label>   
+      <label>Username<br><input type="text" name="Username" /></label>   
   </p>
   <p>
-      <label>Password<br><input type="text" name="name" /></label>   
+      <label>Password<br><input type="text" name="Password" /></label>   
   </p>
 	
   <p>
