--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <label> Email Address  (eg. your_address@yourdomain.com)<br><input type="email" name="email" /></label>
   </p>
 	 <p>
- <label>Username<input id="column-left" type="text" name="first-name" placeholder="Username"/></label>  
+ <input id="column-left" type="text" name="first-name" placeholder="Username"/> 
   </p>
   <p>
       <label>Password<br><input type="text" name="Password" /></label>   
